Refactored test of command Rename All